// See IngredientDetailsV1Pb.pts

syntax = "proto3";
package mealz.ingredients;

enum IngredientTypeV1 {
  GENERIC = 0;
  PRODUCT = 1;
}

enum FactIdV1 {
  CALORIES = 0;
  CARBS = 1;
  SUGARS = 2;
  PROTEIN = 3;
  TOTAL_FAT = 4;
  SATURATED_FAT = 5;
  MONOUNSATURATED_FAT = 6;
  POLYUNSATURATED_FAT = 7;
  TRANS_FAT = 8;
}

enum FactUnitV1 {
  KCAL = 0;
  GRAMS = 1;
}

message FactPer100V1 {
  // Fact identifier
  FactIdV1 id = 1;

  // Unit of the fact
  FactUnitV1 unit = 2;

  // Amount of the fact per 100 units
  double amount = 3;
}

message ProductV1 {
  // Brand of the product
  string brand = 1;
}

message IngredientDetailsV1 {
  // Name in various languages
  map<string, string> name = 1;

  // Type of ingredient
  IngredientTypeV1 type = 2;

  // Facts per 100g
  repeated FactPer100V1 facts = 3;

  // Product if ingredient is a product
  optional ProductV1 product = 4;
}